# minebot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yaml
src/: config.js  config.rs  cron.js  ec2.rs  http.rs  index.js  lib.rs  main.rs
src/commands/: ec2.js  mod.rs  server.rs
terraform/: main.tf
